--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@remix-run/react": "^1.19.3",
     "@remix-run/serve": "^1.19.3",
     "@supabase/auth-helpers-remix": "^0.2.1",
+    "@supabase/supabase-js": "^2.33.1",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
